<resources>
    <string name="app_name">Courses App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="entrance">Вход</string>
    <string name="email">Email</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="password">Пароль</string>
    <string name="enter_the_password">Введите пароль</string>
    <string name="do_not_have_an_account">Нету аккаунта?</string>
    <string name="registration">Регитрация</string>
    <string name="forgot_my_password">Забыл пароль</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="favourites_ru">Избранное</string>
    <string name="account">Account</string>
    <string name="error">Ошибка!</string>
    <string name="search_courses">Search courses...</string>
    <string name="by_date_added">По дате добавления</string>
    <string name="filter">Filter</string>
    <string name="more_detailed">Подробнее</string>
</resources>