<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginHorizontal="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.search.SearchBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background_accent"
            app:navigationIcon="@drawable/ic_search"
            app:navigationIconTint="@color/text_primary"
            android:hint="@string/search_courses"
            android:layout_weight="1"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/filter"
            app:shapeAppearance="@style/Widget.Design.FloatingActionButton"
            app:srcCompat="@drawable/ic_filter"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="4dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginEnd="2dp"
            android:layout_gravity="center_vertical"
            android:text="@string/by_date_added" />

        <ImageView
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_sort" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCoursesHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>